--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon index.js --exec babel-node",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "Kosisochukwu Abone, Abhijit Singh, Ilham Sheikh",
+  "author": "Group 15: Kosisochukwu Abone, Abhijit Singh, Ilham Sheikh",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.20.2",
